# priyambodo.com-iamgemini

./: .gitignore  README.md  changes.txt  published-github.txt  published-website.txt  sh-gitpushcommit.sh
.idx/: dev.nix
iamgemini-gui.v6.0/: 0_🥷_I_am_Gemini_v6.py  Dockerfile  pyproject.toml  sh00-set-environment.sh  sh01-poetry-initialization.sh  sh02-streamlit.sh  sh04-dockerbuild-and-dockerrun_notused.sh
iamgemini-gui.v6.0/myfunctions/: f_callgemini_vertexai.py
iamgemini-gui.v6.0/pages/: 3_🖥️_Create_AI_Images_from_Text.py  feedback.txt
iamgemini-gui.v6.0/penguinfunctions/: readme.txt
iamgemini.priyambodo.com-v1.0/: pyproject.toml  sh01-poetry-initialization.sh  sh04-docker-pushartifact.sh  sh05-deploy-to-cloudrun.sh  sh11-pythonenv-donotuse.sh
iamgemini.priyambodo.com-v2.0/: 0_🥷_I_am_Gemini_v2.py  Dockerfile  pyproject.toml  requirements.txt  version.txt
iamgemini.priyambodo.com-v2.0/pages/: 1_💬_Chat_with_AI_using_Gemini.py  3_🖥️_Create_AI_Images_from_Text.py  4_🗒️_Google_Gemini_Multimodal_Demo.py  feedback.txt
iamgemini.priyambodo.com-v3.0/: 0_🥷_I_am_Gemini_v3.py  Dockerfile  pyproject.toml  requirements.txt
iamgemini.priyambodo.com-v3.0/myfunctions/: f_callgemini_vertexai.py  f_callimagen_vertexai.py  f_callstorage_utility.py
iamgemini.priyambodo.com-v3.0/pages/: 5_🪄_Fun_Demos_with_GenAI.py  6_💬_Talk_to_Your_Own_Data.py
iamgemini.priyambodo.com-v5.0/: 0_🥷_I_am_Gemini_v5.py  pyproject.toml  requirements.txt  sh02-streamlit.sh  sh03-cloudrun.sh  version.txt
iamgemini.priyambodo.com-v5.0/myfunctions/: f_callimagen_vertexai.py  f_callstorage_utility.py
iamgemini.priyambodo.com-v5.0/pages/: 2_🖼️_Analyze_your_Image_using_Gemini.py  4_🗒️_Google_Gemini_Multimodal_Demo.py  5_🪄_Fun_Demos_with_GenAI.py  99_🙎‍♂️_About_this_Application.py
iamgemini.priyambodo.com-v5.0/penguinfunctions/: f_penguin-gemini.py
iamgemini.priyambodo.com-v5.0/temp_donotdelete/: donotdeletethisfolder.txt
v1.0/: sh01-runtheapp-local.sh  sh02-setvariabel-export.sh
