[tool.poetry]
name = "iamgemini-priyambodo-com-v2-0"
version = "2.0"
description = "iamgemini.priyambodo.com"
authors = ["Doddi Priyambodo <doddi@bicarait.com>"]
readme = "README.md"
packages = [{include = "iamgemini"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.29.0"
google-cloud-aiplatform = "^1.38.1"
google-cloud-logging = "^3.9.0"
langchain = "^0.0.353"
pytz = "^2024.1"
google-cloud-discoveryengine = "^0.11.9"
transformers = "^4.38.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
